page changes for initial layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,27 +1,13 @@
 <!-- Bottom bar -->
-<div class="navbar navbar-default navbar-bottom" id="bottom-nav">
-    <div class="container-fluid justify-content-center">
-        <div class="row">
-            <div class="social-media">
-                <a href="https://www.facebook.com/" target="_blank">
-                    <span class="fa-stack fa-lg">
-                        <i class="fa fa-facebook fa-stack-1x"></i>
-                        <i class="fa fa-square-o fa-stack-2x"></i>
-                    </span>
-                </a>
-                <a href="https://www.instagram.com/" target="_blank">
-                    <span class="fa-stack fa-lg">
-                        <i class="fa fa-instagram fa-stack-1x"></i>
-                        <i class="fa fa-square-o fa-stack-2x"></i>
-                    </span>
-                </a>
-                <a href="mailto:" target="_blank">
-                    <span class="fa-stack fa-lg">
-                        <i class="fa fa-envelope fa-stack-1x"></i>
-                        <i class="fa fa-square-o fa-stack-2x"></i>
-                    </span>
-                </a>
-            </div>
-        </div>
+<div class="navbar fixed-bottom" id="bot-nav">
+
+        <a class="navbar-brand nav-bot" href="{{ site.baseurl }}/">
+        </a>
+        <a class="" href="{{ site.baseurl }}/contact">Get in touch</a>
+
+        <div class=""><a href="">email</a> | <a href="">Facebook</a> | <a href=""> Instagram</a></div>
+
+        <a class="" href="{{ site.baseurl }}/sponsors">Sponsors</a>
+        <div class="rect"></div>
     </div>
 </div>
