--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
 <div class="navbar navbar-fixed-top navbar-expand-md" id="top-nav">
 
     <a class="navbar-brand" href="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/img/transparent-logo.png" height="30" width="85" alt="">
     </a>
+    <div class="square"></div>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarMain" aria-controls="navbarMain" aria-expanded="true" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"><i class="fa fa-bars fa-lg"></i></span>
     </button>
@@ -11,22 +11,22 @@
     <div class="navbar-collapse collapse" id="navbarMain">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/about">About Us</a>
+                <a class="nav-link" href="{{ site.baseurl }}/about">ABOUT</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/Committees">Committees</a>
+                <a class="nav-link" href="{{ site.baseurl }}/Committee">COMMITTEE</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/clients">Clients</a>
+                <a class="nav-link" href="{{ site.baseurl }}/clients">CLIENT</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/events">Events</a>
+                <a class="nav-link" href="{{ site.baseurl }}/events">EVENTS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/Sponsorship">Sponsorship</a>
+                <a class="nav-link" href="{{ site.baseurl }}/Sponsorship">SPONSORSHIP</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/join">Join Us</a>
+                <a class="nav-link" href="{{ site.baseurl }}/join">JOIN US</a>
             </li>
         </ul>
     </div>
