--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 		{% include head.html %}
-		<link rel="stylesheet" href="{{ site.baseurl }}/css/index.css">
+		<link rel="stylesheet" href="{{ site.baseurl }}/css/front.css">
     </head>
     <body>
         {% include header.html %}
