--- a/css/main.scss
+++ b/css/main.scss
@@ -11,467 +11,17 @@ html, body {
 }
 
 body {
-    // background: url({{ site.baseurl }}/img/college_hall.jpg) no-repeat center;
-    // background-size: cover;
-    // background-attachment: fixed;
     width: 100%;
-
-    font: 'open sans', 'helvetica';
-    font-weight: 400;
-
-    /*display: flex;*/
-    /*flex-direction: column;*/
-}
-
-.wrapper {
-    min-height: calc(100vh - 155px);
-}
-
-/*Top Navbar*/
-
-.nav-item {
-    margin-left: 10px
-}
-
-#top-nav {
-    border-bottom: 3px solid $blue;
+    font: 'Montserrat';
     font-weight: 400;
 }
-
-.navbar-toggler {
-    vertical-align: middle;
-}
-
-.nav-link {
-    color: $blue;
-}
-
-.nav-link:hover {
-    color: $alt-blue;
-    margin-left: 0;
-    margin-right: 0;
-}
-
-.dropdown-menu {
-    font-size: 14px;
-    background-color: #efefef;
-    border-radius: 0;
-}
-
-@media (min-width: 992px) {
-    .dropdown-menu {
-        border-bottom: 3px solid $blue;
-        border-left: 3px solid $blue;
-        border-right: 3px solid $blue;
-        border-top: 0;
-        margin-top: 10.5px;
-        margin-left: -18px;
-    }
-}
-
-@media (max-width: 991px) {
-    .dropdown-menu {
-        border: 0;
-    }
-
-    .dropdown-item {
-        margin-bottom: 10px;
-    }
-}
-
-.dropdown-item {
-    color: $blue;
-}
-
-.dropdown-item:hover {
-    background-color: #efefef;
-    color: $alt-blue;
-}
-
-/* Page Title */
-
-.jumbotron {
-    margin-top: 60px;
-    background-color: transparent;
-}
-
-h1 {
-    color: white;
-    margin-left: -10px;
-    font-weight: 700;
-    display: inline-block;
-}
-
-/* Main Page Content */
-
-h2 {
-    margin-top: 25px;
-    margin-bottom: 25px;
-
-    font-family: 'Oswald', sans-serif;
-    color: $blue;
-}
-
-p {
-    padding-left: 15px;
-    padding-right: 15px;
-    line-height: 1.7rem;
-}
-
-hr {
-    color: $blue;
-    background: $blue;
-    height: 3px;
-    border-radius: 1px;
-    margin-right: 30px;
-    margin-top: -40px;
-    margin-bottom: 40px;
-    margin-left: 100%;
-}
-
-.main-content {
-
-    border: 3px solid $blue;
-    border-radius: 3px;
-
-
-    border-image-slice: 1;
-
-
-    padding-top: 20px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 20px;
-    margin-bottom: 70px;
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
-p a {
-    color: $red;
-}
-
-ul a {
-    color: $red;
-}
-
-.plain-content-box {
-    border-image: none;
-    border-color: $blue;
-}
-
-.announcement {
-    padding-top: 20px;
-}
-
-/* Bottom Navbar */
-
-#bottom-nav {
-    z-index: 100;
-    border-top: 3px solid $red;
-    margin-top: 30px;
-    min-height: 120px;
-}
-
-#bottom-nav > * > * > * {
-    padding-top: 10px;
-}
-
-.navbar-bottom {
-    text-align: center;
-    color: #787878;
-}
-
-.social-media a {
-    text-decoration: none;
-}
-
-.social-media .fa {
-    color: $red;
-}
-
-.about-soup a {
-    color: $red;
-    text-decoration: none;
-}
-
-.about-soup a:hover,.about-soup a:focus {
-    color: #alt-red;
-}
-
-#penn-eng {
-    margin-top: -5px;
-    height: 100px;
-}
-
-/*Announcements*/
-h3 {
-    color: $blue;
-    font-weight: bold;
-    margin-bottom: 10px;
-    font-size: 24px;
-    display: block;
-}
-
-h5 {
-    color: $red;
-    padding-top: 5px;
-    font-size: 18px;
-    display: block;
-}
-
-.announce {
-    margin-top: 10px;
-}
-
-/*Gridder shit*/
-
-.gridder-list {
-    margin-right: 100px;
-}
-
-.inner-jawn {
-    width: 300px;
-}
-
-/* Tournament Details */
-
-.alt-header {
-    margin-top: 40px;
-    margin-bottom: 40px;
-}
-
-.uncreative-class-name {
-    max-width: 160px;
-    margin: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-
-h4 {
-    font-size: 24px;
-    text-align: center;
-    font-weight: bold;
-    color: $red;
-    margin-bottom: 20px;
-}
-
-.jawn {
-    text-align: center;
-}
-
-.second-header {
-    margin-top: 40px;
-}
-
-/* Lists */
-
-.bullets li {
-  padding: 10px;
-  overflow: auto;
-}
-
-
-
-ul {
-  list-style-type: none;  
-  padding: 0;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.btn, .btn:focus {
-    background: $blue;
-    color: white;
-    border-radius: 0;
-    margin: 10px;
-}
-
-.btn:hover {
-    background: $alt-blue;
-    color: white;
-}
-
-.italics {
-    font-style: italic;
-}
-
-blockquote {
-    background: #f9f9f9;
-    border-left: 10px solid #ccc;
-    margin: 1.5em 10px 1.5em 20px;
-    padding: 0.5em 10px;
-}
-blockquote:before {
-    color: #ccc;
-    font-size: 4em;
-    line-height: 0.1em;
-    margin-right: 0.25em;
-    vertical-align: -0.4em;
-}
-blockquote p {
-    display: inline;
-}
-
-option {
-    font-family: 'Roboto', sans-serif;
-}
-
-.form-style {
-    margin:10px auto;
-    font-size: 14px;
-    padding-left: 20px;
-}
-.form-style li {
-    padding: 0;
-    display: block;
-    list-style: none;
-    margin: 5px 0 0 0;
-}
-.form-style label{
-    margin:0 0 3px 0;
-    padding:0px;
-    padding-left: 5px;
-    display:block;
-    font-weight: bold;
-    text-align: left;
-}
-.form-style input{
-    margin:0 0 3px 0;
-    padding:0px;
-    padding-left: 5px;
-    display:block;
-    font-weight: bold;
-    text-align: left;
-}
-.form-style input[type=text], 
-textarea, 
-select{
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    border:1px solid #BEBEBE;
-    padding: 7px;
-    margin:0px;
-    -webkit-transition: all 0.30s ease-in-out;
-    -moz-transition: all 0.30s ease-in-out;
-    -ms-transition: all 0.30s ease-in-out;
-    -o-transition: all 0.30s ease-in-out;
-    outline: none;  
-}
-.form-style input[type=text]:focus, 
-.form-style textarea:focus, 
-.form-style select:focus{
-    border: 1px solid $alt-blue;
-}
-.form-style .field-long{
-    width: 100%;
-}
-.form-style .field-select{
-    width: 100%;
-}
-.form-style input[type=submit], .form-style-1 input[type=button]{
-    background: $blue;
-    padding: 8px 15px 8px 15px;
-    border: none;
-    color: #fff;
-}
-.form-style input[type=submit]:hover, .form-style-1 input[type=button]:hover{
-    background: $alt-blue;
-}
-.form-style .required{
-    color: $alt-red;
-}
-#pay-now {
-    margin: 10px 0 10px 20px;
-}
-@media (max-width: 767px) {
-    p {
-        padding: 5px 0 10px 0;
-        margin: 0;
-    }
-
-    .main-content {
-        padding: 0 20px 10px 20px;
-    }
-
-    .form-style {
-        padding: 0;
-    }
-
-    blockquote {
-        margin: 5px;
-    }
-
-    ul {
-        padding: 0;
-        margin: 0;
-    }
-}
-#register-submit {
-    margin: 15px 0 10px 0px;
-}
-
-#t-shirt {
-    display : block;
-    margin : auto;
-    max-width: 250px;
-}
-
-.sponsor {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 80%;
-    margin-bottom: 2em;
-}
-
-@media(min-width: 650px) {
-    .sponsor {
-        max-width: 500px;
-    }
-}
-
-.asdf2 {
-    font-size: .8em;
-    text-align: center;
-}
-
-@media (min-width: 768px) {
-    .prof-pic {
-        float: right;
-        max-width: 200px;
-        margin-left: 30px;
-        margin-bottom: 20px;
-    }
-    #top-nav {
-        z-index: 1;
-    }
-    #front-media {
-        position: relative;
-    }
-}
-
-@media (max-width: 767px) {
-    .prof-pic {
-        float: center;
-        margin-bottom: 20px;
-    }
-}
-
-.card {
-    background-color: default;
-}
-
-.event-desc {
-    padding: 20px;
-    background-color: transparent;
-}
-
-.event-name {
-    color: $blue;
-}
-
-.event-name:focus, .event-name:hover, {
-    color: $alt-blue;
+.brick {
+    height: 1em;
+    widows: 1em;
+    background-color: $blue;
+}
+
+.title {
+    font-weight: 400;
+    
 }
