--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
-<title>WHARTON UNDERGRADUATE </title>
+<title style="font-family:verdana;">WHARTON UNDERGRADUATE </title>
     <br> 
-<title>CONSULTING CLUB</title>
+<title style="font-family:verdana;">CONSULTING CLUB</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
