content and format changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,19 @@
 <!-- Bottom bar -->
 <div class="navbar fixed-bottom" id="bot-nav">
 
-        <a class="navbar-brand nav-bot" href="{{ site.baseurl }}/">
-        </a>
-        <a class="" href="{{ site.baseurl }}/contact">Get in touch</a>
+        <a class="offset-md-3" href="{{ site.baseurl }}/contact">Get in touch</a>
 
-        <div class=""><a href="">email</a> | <a href="">Facebook</a> | <a href=""> Instagram</a></div>
+        <div class=""><a href=""> <span class="fa-stack fa-lg">
+            <i class="fa fa-envelope fa-stack-1x"></i>
+            <i class="fa fa-square-o fa-stack-2x"></i>
+        </span>Email</a> | <a href=""> <span class="fa-stack fa-lg">
+            <i class="fa fa-facebook fa-stack-1x"></i>
+            <i class="fa fa-square-o fa-stack-2x"></i>
+        </span> Facebook</a> | <a href=""> <span class="fa-stack fa-lg">
+            <i class="fa fa-instagram fa-stack-1x"></i>
+            <i class="fa fa-square-o fa-stack-2x"></i>
+        </span> Instagram</a></div>
 
-        <a class="" href="{{ site.baseurl }}/sponsors">Sponsors</a>
-        <div class="rect"></div>
+        <a class="col-md-3 text-left" href="{{ site.baseurl }}/sponsors">Sponsors</a>
     </div>
 </div>
