--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family: Helvetica, Arial, sans-serif
 }
 
 body {
@@ -83,6 +84,7 @@ body {
 
 .descrip p{
     font-size: .9rem;
+    margin-left: -3%;
 }
 .intro {
     margin-bottom: 20%;
